--- a/src/components/custom/CustomHeader/CustomHeader.css
+++ b/src/components/custom/CustomHeader/CustomHeader.css
@@ -1,8 +1,24 @@
-.header_flex_container{
+.header_flex_container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 0;
+}
+.company_logo {
+  cursor: pointer;
+}
+
+.company_logo:hover {
+  transform: scale(1.1);
+  transition: 0.3s ease all;
+}
+
+@media screen and (max-width: 600px) {
+  .header_flex_container {
     display: flex;
+    flex-direction: column !important;
     align-items: center;
     justify-content: space-between;
-}
-.company_logo{
-    cursor: pointer;
+    padding: 10px 0;
+  }
 }
