--- a/src/components/custom/CustomSearchBar/CustomSearchBar.css
+++ b/src/components/custom/CustomSearchBar/CustomSearchBar.css
@@ -1,7 +1,24 @@
-.search_icon{
-    object-fit: contain;
-    box-sizing: border-box;
-    width: 20;
-    height: 19;
-    cursor: pointer;
+.search_icon {
+  object-fit: contain;
+  box-sizing: border-box;
+  width: 20;
+  height: 19;
+  cursor: pointer;
+  margin-right: 15px;
+}
+.search_flex {
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.search_icon:hover {
+  transform: scale(1.1);
+  transition: 0.3s ease all;
+}
+
+@media screen and (max-width: 600px) {
+  .search_flex {
+    display: none;
+  }
 }
